fabric/testdata/out/ing_brexit-indexer-test-brcullen-statsd-exporter-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"application":"brexit","component":"statsd-exporter","controller-uid":"8d1c6671-5b19-4466-9331-5dec5bc8882c","deployment-id":"d-2rkso445wghh63sov54ezgarsh","environment":"review","pipeline-id":"l-2nu689sag7uyvsxv4f8yc5dty1","version":"pr-45-1"},"name":"brexit-indexer-test-brcullen-statsd-exporter-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"brexit-indexer-test-brcullen-statsd-exporter.smart-product-platform-test.zalan.do","http": [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-05-05T15:06:21Z"
  generation: 1
  labels:
    application: brexit
    component: statsd-exporter
    controller-uid: 8d1c6671-5b19-4466-9331-5dec5bc8882c
    deployment-id: d-2rkso445wghh63sov54ezgarsh
    environment: review
    pipeline-id: l-2nu689sag7uyvsxv4f8yc5dty1
    version: pr-45-1
  name: brexit-indexer-test-brcullen-statsd-exporter-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brexit-indexer-test-brcullen-statsd-exporter
    uid: 8d1c6671-5b19-4466-9331-5dec5bc8882c
  resourceVersion: "1364414271"
  uid: ed909a5f-7022-4115-bd44-0556b6cd58ed
spec:
  rules:
  - host: brexit-indexer-test-brcullen-statsd-exporter.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brexit-indexer-test-brcullen-statsd-exporter
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
